fixes #592 The card header class has unnecessary border while collapsed

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/cards/card.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/cards/card.css
@@ -34,7 +34,7 @@
     position: relative;
 }
 
-.card .header:not([class*="bg-"]) {
+.card:not([class*="dom-ui-collapsed"]) .header:not([class*="bg-"]) {
     border-bottom: 1px solid rgba(204, 204, 204, 0.35);
 }
 
